# Tkinter-Async-Execute

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml
.github/workflows/: create_release.yml
docs/source/: changelog.rst  conf.py  index.rst
docs/source/guide/: index.rst  quickstart.rst
docs/source/reference/Program/: control.rst  execution.rst  index.rst  widgets.rst
docs/source/scripts/: generate_autodoc.py
requirements/: dev.txt  main.txt
tk_async_execute/: __init__.py  doc.py  utils.py  widget.py
