[build-system]
requires = [
    "setuptools",
    "wheel",
]

build-backend = "setuptools.build_meta"


[project]
name = "tk-async-execute"
authors = [
    {name = "David Hozic"}
]
description = "Simple library that allows interaction between Tkinter and asyncio event loop running in a seperate thread."

readme = "README.md"
requires-python = ">=3.8"
keywords = ["Tkinter", "asyncio", "Async execute", "Execution progress window"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies", "version"]

[tool.setuptools]
include-package-data = true
packages = ["tk_async_execute"]


[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "tk_async_execute.VERSION"}
